--- a/apps/main/src/app/app.component.html
+++ b/apps/main/src/app/app.component.html
@@ -1,8 +1,2 @@
-<div style="text-align:center">
-  <h1>Welcome to main!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png"
-  />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+<div>Below this is a router outlet</div>
+<router-outlet></router-outlet>
